--- a/08_real-sensor/pom.xml
+++ b/08_real-sensor/pom.xml
@@ -3,58 +3,24 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>07_virtual-sensor</artifactId>
-	<packaging>jar</packaging>
-	<version>1.0</version>
+	<groupId>com.raspberrypi.workshop</groupId>
+	<artifactId>08_real-sensor</artifactId>
+	<version>0.1</version>
+	<packaging>pom</packaging>
 
-	<name>07_virtual-sensor</name>
-	<description>Virtual Sensors</description>
-
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.2.6.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
+	<name>08_real-sensor</name>
+	<description>Workshop projects for real sensors</description>
+	
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.7</java.version>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
 	</properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.raspberrypi.workshop</groupId>
-			<artifactId>20_sensors</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-		
-		
-		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
-	
 
+	<modules>
+		<module>08-01_humidity</module>
+		<module>08-02_pir</module>
+	</modules>
 </project>
