--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
 		
 		<module>07_virtual-sensor</module>
 		<module>08_real-sensor</module>
-
 		<module>09_data-storage</module>
+		<module>10_data-visualization</module>
 		
 		<module>11_queue</module>
                 <module>13_accelerometer</module>
