--- a/10_data-visualization/src/main/resources/static/bower.json
+++ b/10_data-visualization/src/main/resources/static/bower.json
@@ -13,6 +13,9 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "highcharts": "^5.0.2"
+    "highcharts": "^5.0.2",
+    "socket.io": "^1.5.1",
+    "stomp-websocket": "^2.3.4",
+    "socket.io-client": "^1.5.1"
   }
 }
