ADD producer consumer

--- a/11_queue/11-2_consumer/src/main/resources/application.properties
+++ b/11_queue/11-2_consumer/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port: ${port:8080}
-debug: true
+server.port: ${port:8090}
+debug: false
 spring.rabbitmq.host=${vcap.services.myRMQ.credentials.hostname:3.51.54.58}
 spring.rabbitmq.vhost=${vcap.services.myRMQ.credentials.vhost:/}
 spring.rabbitmq.username=${vcap.services.myRMQ.credentials.username:npss}
