--- a/07_virtual-sensor/src/main/resources/application.properties
+++ b/07_virtual-sensor/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-myProperty=20
+server.port: 8080
+debug: false
+spring.rabbitmq.host=192.168.0.30
+spring.rabbitmq.vhost=/
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+spring.rabbitmq.port=5672
