--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,18 @@
 		<module>02_hello-word-sb</module>
 		<module>03_simple-web</module>
 		<module>04_simple-rest</module>
-		
+		<module>05_raspberrypi-gpio</module>
+		<module>06_queue</module>
 		<module>07_virtual-sensor</module>
-		<module>08_real-sensor</module>
+		
+		<!--module>08_real-sensor</module>
 		<module>09_data-storage</module>
 		<module>10_data-visualization</module>
 		
 		<module>11_queue</module>
                 <module>13_accelerometer</module>
 		
-		<module>20_sensors</module>
+		<module>20_sensors</module-->
 		
 		
 	</modules>
