[RUL 18-APR-2017] Adding Stomp into basic web project

--- a/12_node_express/package.json
+++ b/12_node_express/package.json
@@ -9,6 +9,7 @@
   "author": "Ricardo Uribe",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "stompjs": "^2.3.3"
   }
 }
