[HRC 25-APR-2017] Added two new components to display and consume data

--- a/07_virtual-sensor/src/main/resources/application.properties
+++ b/07_virtual-sensor/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port: 8080
 debug: false
-spring.rabbitmq.host=192.168.0.30
+spring.rabbitmq.host=192.168.1.70
 spring.rabbitmq.vhost=/
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 spring.rabbitmq.port=5672
