[RUL 8-APR-2017] Updates to project 12 to support toasts

--- a/12_node_express/bower.json
+++ b/12_node_express/bower.json
@@ -17,6 +17,8 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
-    "google-map": "GoogleWebComponents/google-map#^1.2.0"
+    "google-map": "GoogleWebComponents/google-map#^1.2.0",
+    "app-toasts": "^0.3.2",
+    "paper-toast": "^1.3.1"
   }
 }
