--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ target
 *.classpath
 .settings
 */bower_components
+11_ply-hello-world/SimpleComponent/bower_components/*
+11_ply-hello-world/SimpleComponent/node_modules/*
 */node_modules
 *.iml
 .idea/*
